fix scrollbar + some style improvements

--- a/web/src/main/webapp/resources/css/intro.css
+++ b/web/src/main/webapp/resources/css/intro.css
@@ -28,3 +28,7 @@
     margin-left: 22px;
     padding-top: 25px;
 }
+
+.pm2 {
+    margin-top: 2px;
+}
